  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.113 2007/02/15 02:24:27 snikkel Exp $
==========================================================================

2.9000
------
2.9013-499  imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)

2.9013-498  new: x86: Added new AMD optimized OGR core, selected for AMD CPUs
            new: x86: Detect Intel Core 1/2 (#3939, #3969)
            new: x86: Detect 65um Intel Netburst (#3972)
            new: x86: Detect Via C7 (#3962)
            chg: x86: P4 naming (#3862)
            chg: x86: AMD K8/Opteron Naming (#3912, #3967)
            chg: x86: K6 core selection (#3968)
            imp: solaris: Retrieve newer chip names

2.9012-497  new: x86: Added new MMX assembly OGR core, selected for MMX CPUs
            fix: ogr: some platforms reported incorrect node counts if restarted
            imp: ppc: Recognize PPC970MP (G5 dual core)
            fix: macosx: StartupItems permissions fixed (#3942)
            imp: linux: support battery-mode execution via ACPI(#3314)

2.9011-496  new: x86: Added new assembly OGR core and selected as default
            fix: x86: Correct RC5 core count speed factor for mmx (#3770)
            fix: x86: Properly detect National Geode (#3852)
            new: x86-64: Added new KBE-64 core and selected as default for K8/P4
            chg: x86: pre-selection for AMD K6 (#3863)
            chg: x86: pre-selection for Pentium M (#3870)
            chg: x86: OGR pre-selection for C3 (#3885)
            new: x86: detect Athlon 64 X2 (#3889)

2.9010-495  fix: x86: Fixed cores dg3, sgp3 and snjl.