@@ -4,7 +4,7 @@
  * Any other distribution or use of this source violates copyright.
 */
 const char *core_r72_cpp(void) {
-return "@(#)$Id: core_r72.cpp,v 1.1.2.49 2006/11/27 10:33:31 jt Exp $"; }
+return "@(#)$Id: core_r72.cpp,v 1.1.2.50 2007/04/07 09:07:57 stream Exp $"; }
 
 //#define TRACE
 
@@ -386,7 +386,7 @@ int selcoreGetPreselectedCoreForProject_rc572()
           case 0x08: cindex = 1; break; // PPro           == SES 2-pipe (#3708)
           case 0x09: cindex = 6; break; // K7/K8          == GO 2-pipe
           case 0x0A: cindex = 5; break; // Centaur C6     == SS 2-pipe (#3809)
-          case 0x0B: cindex = 7; break; // Pentium 4      == SGP 3-pipe
+          case 0x0B: cindex = 6; break; // Pentium 4      == GO 2-pipe (#3960, #3265)
           case 0x0C: cindex = 4; break; // Via C3         == DG 3-pipe alt (#3477)
           case 0x0D: cindex = 6; break; // Pentium M      == GO 2-pipe (#3870)
           case 0x0E: cindex = 6; break; // Pentium III    == GO 2-pipe (#3602)
